2012-11-16  Eric B. Weddington <eric.weddington@atmel.com>

	Fix for bug #35539. Thanks to Georg-Johann Lay for fix.
	* include/stdlib.h (EXIT_SUCCESS, EXIT_FAILURE): Add.

2012-09-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/xmega.h: New file, implement _PROTECTED_WRITE.
	* include/avr/io.h: Include <avr/xmega.h>
	* doc/api/doxygen.config.in: Add <avr/xmega.h> to documentation build.

2012-07-30  Dmitry Xmelkov  <dmix@gmail.ru>

	patch #3729: Printf for integers speed up
	Thanks to Georg-Johann Lay.
	* doc/api/bench-libc.dox: Regenerate with GCC 4.7.1 (and new integer
	to ASCII functions).
	* include/stdlib.h: Define *toa() as inline functions.
	* libc/misc/Files.am: Add new files.
	* libc/misc/itoa.S: Rewrite.
	* libc/misc/itoa_ncheck.S: New file.
	* libc/misc/ltoa.S: Rewrite.
	* libc/misc/ltoa_ncheck.S: New file.
	* libc/misc/ultoa.S: Rewrite.
	* libc/misc/ultoa_ncheck.S: New file.
	* libc/misc/utoa.S: Rewrite.
	* libc/misc/utoa_ncheck.S: New file.
	* tests/simulate/stdlib/itoa-1.c: New file.
	* tests/simulate/stdlib/itoa-2.c: New file.
	* tests/simulate/stdlib/ltoa-1.c: New file.
	* tests/simulate/stdlib/ltoa-2.c: New file.
	* tests/simulate/stdlib/ultoa-1.c: New file.
	* tests/simulate/stdlib/ultoa-2.c: New file.
	* tests/simulate/stdlib/ultoa-3.c: New file.
	* tests/simulate/stdlib/utoa-1.c: New file.
	* tests/simulate/stdlib/utoa-2.c: New file.
	* tests/simulate/stdlib/utoa-3.c: New file.

2012-06-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/signature.h (__signature): mark as "used"
	so the linker won't throw it away
	* include/avr/fuse.h (FUSEMEM): (Dito.)
	* include/avr/lock.h (LOCKMEM): (Dito.)

2012-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Itai Nahshon:
	XXX_vect_num not consistent io90pwmx.h, iousbxx6_7.h
	* include/avr/iousbxx6_7.h (TWI_vect_num): make this a number
	* include/avr/io90pwmx.h (TIMER1_COMPA_vect_num): (Dito.)

2012-06-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
